// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BrandLogo renders dark custom branding logo 1`] = `
<img
  className="brand-logo"
  src="l"
/>
`;

exports[`BrandLogo renders dark custom branding symbol 1`] = `
<img
  className="brand-logo brand-logo--spin"
  src="s"
/>
`;

exports[`BrandLogo renders dark sourcegraph logo 1`] = `
<img
  className="brand-logo"
  src="/assets/img/sourcegraph-head-logo.svg?v2"
/>
`;

exports[`BrandLogo renders dark sourcegraph symbol 1`] = `
<img
  className="brand-logo brand-logo--spin"
  src="/assets/img/sourcegraph-mark.svg"
/>
`;

exports[`BrandLogo renders light custom branding logo 1`] = `
<img
  className="brand-logo"
  src="l"
/>
`;

exports[`BrandLogo renders light custom branding symbol 1`] = `
<img
  className="brand-logo brand-logo--spin"
  src="s"
/>
`;

exports[`BrandLogo renders light sourcegraph logo 1`] = `
<img
  className="brand-logo"
  src="/assets/img/sourcegraph-light-head-logo.svg?v2"
/>
`;

exports[`BrandLogo renders light sourcegraph symbol 1`] = `
<img
  className="brand-logo brand-logo--spin"
  src="/assets/img/sourcegraph-mark.svg"
/>
`;
